<resources>
    <string name="app_name">taller2</string>
    <string name="action_settings">Settings</string>
    <string name="peliculas">Peliculas</string>
    <string name="nombre">Nombre de pelicula</string>
    <string name="duracion">Duracion</string>
    <string name="genero">Género</string>
    <string name="clasificacion">Clasificación</string>
    <string name="agregar">Agregar</string>
    <string name="limpiar">Limpiar</string>
</resources>
